# zkin-smart-wallet

./: .DevNotes.md  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
programs/zkin-smartwallet/: Cargo.toml
programs/zkin-smartwallet/src/: constants.rs  lib.rs  program_error.rs  verifying_key.rs
programs/zkin-smartwallet/src/account_data/: auth_provider.rs  mod.rs  state.rs  wallet.rs  zkp.rs
programs/zkin-smartwallet/src/instructions/: create_wallet.rs  init_zkp.rs  initialize.rs  mod.rs  prepare_zkp.rs  register_rsa_modulus.rs  update_operators.rs  verify_jwt.rs  verify_proof.rs
programs/zkin-smartwallet/src/processors/: create_wallet.rs  init_zkp.rs  initialize.rs  mod.rs  prepare_zkp.rs  register_rsa_modulus.rs  update_operators.rs  verify_jwt.rs  verify_proof.rs
programs/zkin-smartwallet/src/zk/: mod.rs  verifier.rs  verifying_key.rs
rsa/: Cargo.toml
rsa/src/: main.rs
test-scripts/: createProof.js
tests/: common.js  createWallet.js  proof.json  public.json  verify_jwt.js  zkin-smartwallet.ts
tests/helpers/: accounts.js
tests/utils/: zk.js
zkin_crypto_wasm/: Cargo.toml
