[package]
name = "zkin-smartwallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "zkin_smartwallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-safe-math = "0.4.0"
ahash = "=0.8.6"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev="d1165a0" }
rsa = "0.4"
sha2 = "0.10"
