[package]
name = "zkin-smartwallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "zkin_smartwallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-safe-math = "0.4.0"
groth16-solana = { path = "../../../groth16-solana" }
hex = "0.4.3"
