[package]
name = "zkin-smartwallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "zkin_smartwallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
localnet = []
default = ["localnet"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-safe-math = "0.4.0"
bs58 = { version = "0.5", features = ["alloc"] }
groth16-solana = { path = "../../../groth16-solana" }
solana-program = "=1.17.17"
